--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "postcss": "^7",
+    "primeflex": "^2.0.0",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.9.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
     "vue-chartjs": "^3.5.1"
