--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
-    "chart.js": "^3.6.0",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "postcss": "^7",
@@ -18,8 +17,7 @@
     "primeicons": "^5.0.0",
     "primevue": "^3.9.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "vue": "^3.0.0",
-    "vue-chartjs": "^3.5.1"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
